<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

<android.support.constraint.ConstraintLayout
    android:layout_width="325mm"
    android:layout_height="315mm"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_shape_r5_c3c4779_w05_lc687df4">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/meeting_jion_id_pic_participant"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tv_join_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_join_tip"
        android:textColor="@color/color_019594"
        android:textSize="9sp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_40mm"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/str_join_title"
        android:textSize="12sp"
        android:textColor="@color/white"
        />


        <EditText
            android:id="@+id/et_id"
            android:layout_width="200dp"
            android:layout_height="34dp"
            android:background="@drawable/bg_selector_et_login"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            android:layout_marginTop="@dimen/dimens_20mm"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/str_join_input_id"
            android:gravity="center"
            android:textColor="@color/white"
            android:textColorHint="@color/color_c9c9cc"
            android:textSize="12sp"
            android:inputType="number"
            android:maxLength="11"
            android:text="" />


    <ImageView
        android:id="@+id/iv_account"
        android:layout_width="49mm"
        android:layout_height="35mm"
        android:focusable="true"
        android:src="@drawable/bg_account_status"
        app:layout_constraintBottom_toBottomOf="@id/et_id"
        app:layout_constraintRight_toRightOf="@id/et_id"
        app:layout_constraintTop_toTopOf="@id/et_id" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="200dp"
            android:layout_height="34dp"
            android:background="@drawable/bg_selector_et_login"
            android:hint="@string/str_join_input_pwd"
            android:textColor="@color/white"
            android:textColorHint="@color/color_c9c9cc"
            android:textSize="12sp"
            android:inputType="number"
            android:maxLength="5"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/et_id"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8mm"
            android:text="" />

    <TextView
        android:id="@+id/tv_auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_enable"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@id/check_audio"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/check_audio"
        app:layout_constraintTop_toTopOf="@id/check_audio" />
    <LinearLayout
        android:id="@+id/check_audio"
        android:layout_marginTop="@dimen/dimens_20mm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv_auto"
        app:layout_constraintTop_toBottomOf="@id/et_pwd"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_open_audio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimens_20mm"
            android:background="@drawable/bg_item_selector_white_line"
            android:button="@null"
            android:drawableLeft="@drawable/bg_selector_joinin"
            android:drawablePadding="3mm"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingLeft="1mm"
            android:paddingRight="1dp"
            android:text="@string/open"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_11"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/cb_close_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16mm"
            android:background="@drawable/bg_item_selector_white_line"
            android:button="@null"
            android:drawableLeft="@drawable/bg_selector_joinin"
            android:drawablePadding="3mm"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingLeft="1mm"
            android:paddingRight="1dp"
            android:text="@string/close"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_11"
            app:layout_constraintBottom_toBottomOf="@id/cb_open_audio"
            app:layout_constraintLeft_toRightOf="@id/cb_open_audio"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/check_video"
        android:layout_marginTop="@dimen/dimens_10mm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/check_audio"
        app:layout_constraintLeft_toLeftOf="@id/check_audio"
        app:layout_constraintTop_toBottomOf="@id/check_audio"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_open_video"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimens_20mm"
            android:background="@drawable/bg_item_selector_white_line"
            android:button="@null"
            android:drawableLeft="@drawable/bg_selector_joinin"
            android:drawablePadding="3mm"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingLeft="1mm"
            android:paddingRight="1dp"
            android:text="@string/open"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_11"/>

        <CheckBox
            android:id="@+id/cb_close_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16mm"
            android:background="@drawable/bg_item_selector_white_line"
            android:button="@null"
            android:drawableLeft="@drawable/bg_selector_joinin"
            android:drawablePadding="3mm"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingLeft="1mm"
            android:paddingRight="1dp"
            android:text="@string/close"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_11"
           />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_camera_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_enable"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintRight_toLeftOf="@id/check_video"
        app:layout_constraintTop_toTopOf="@id/check_video"
        app:layout_constraintBottom_toBottomOf="@id/check_video"
        />


    <TextView
        android:id="@+id/tv_join"
        android:background="@drawable/bg_selector_c687df4_lc00ffff"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="20mm"
        android:layout_gravity="center_horizontal"
        android:text="加入会议"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="11sp"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/check_video"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>

</LinearLayout>