<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/color_translate"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/dimens_4mm">


    <FrameLayout
        android:id="@+id/fl_open_mic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_selector_top_item"
        android:elevation="@dimen/dp_2"
        android:focusable="true"
        android:paddingRight="@dimen/dimens_13mm">

        <TextView
            android:id="@+id/tv_open_mic"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimens_12mm"
            android:drawablePadding="@dimen/dimens_5mm"
            android:focusable="false"
            android:gravity="center"
            android:paddingTop="@dimen/dimens_9mm"
            android:paddingBottom="@dimen/dimens_9mm"
            android:text="@string/open_mic"
            android:textColor="@color/selector_color"
            android:textSize="11sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_zoom_to_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_4mm"
        android:background="@drawable/bg_selector_top_item"
        android:elevation="@dimen/dp_2"
        android:focusable="true"
        android:paddingRight="@dimen/dimens_13mm">

        <TextView
            android:id="@+id/tv_zoom_to_screen"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimens_12mm"
            android:drawablePadding="@dimen/dimens_5mm"
            android:focusable="false"
            android:gravity="center"
            android:paddingTop="@dimen/dimens_9mm"
            android:paddingBottom="@dimen/dimens_9mm"
            android:text="@string/scale2screen"
            android:textColor="@color/selector_color"
            android:textSize="11sp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_open_share_screen"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_34mm"
        android:layout_marginTop="@dimen/dimens_4mm"
        android:background="@drawable/bg_selector_top_item"
        android:elevation="@dimen/dp_2"
        android:focusable="true"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_open_share_screen"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimens_10mm"
            android:drawableLeft="@drawable/icon_micro_state_on"
            android:drawablePadding="@dimen/dimens_10mm"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/open_share_screen"
            android:textColor="@color/selector_color"
            android:textSize="12sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_roll_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_4mm"
        android:background="@drawable/bg_selector_top_item"
        android:elevation="@dimen/dp_2"
        android:focusable="true"
        android:paddingRight="@dimen/dimens_13mm">

        <TextView
            android:id="@+id/roll_call"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimens_12mm"
            android:drawablePadding="@dimen/dimens_5mm"
            android:focusable="false"
            android:paddingTop="@dimen/dimens_9mm"
            android:paddingBottom="@dimen/dimens_9mm"
            android:gravity="center"
            android:text="@string/roll_call"
            android:textColor="@color/selector_color"
            android:textSize="11sp" />

    </FrameLayout>

</LinearLayout>